--- a/IST411Project/backend/package.json
+++ b/IST411Project/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
     "mongoose": "^7.0.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "start": "^5.1.0"
   }
 }
